fdo#63433 fdo#74435: SdrPageView::DrawLayer(): avoid spuriously visible images

In the TestBook2.odt of fdo#73300 it happens that at some particular
points when scrolling down, the
ViewObjectContactOfPageHierarchy::getPrimitive2DSequenceHierarchy()
will determine that > 200 images are visible; most likely this is due to
an empty ObjectContactOfPageView::maViewInformation2D::getViewport().

Loading this many images may need more RAM than is available on 32bit
platforms.

That appears to happen only (but not always) if somehow (not sure
how exactly) the rectangle passed to SdrPageView::DrawLayer() and the
existing GetRedrawRegion() do not overlap at all.

(regression from commit 8af09bf33291df2fb2bfbbd6e42f9bf074fcc4fc)

(cherry picked from commit 66f8b54931f193bdc844c6bca388d9bde98779cd)

Change-Id: Iafc595241df05204bccec1f2336014fc471b6602
Reviewed-on: https://gerrit.libreoffice.org/7813
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>